changed header to be set on app, fixed alignment of landing page

--- a/client/src/scss/Header.scss
+++ b/client/src/scss/Header.scss
@@ -7,7 +7,7 @@
 
   h1{
     padding: 1rem;
-    font-size: 2rem;
+    font-size: 2.5rem;
     color: #489551;
     text-decoration: none;
   }
