--- a/client/src/scss/LandingPage.scss
+++ b/client/src/scss/LandingPage.scss
@@ -1,11 +1,12 @@
 .landing-container{
-    z-index: +1;
+    display: flex;
+    flex-direction: column;
 
   .header{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-
+    justify-content: flex-end;
+    align-items: flex-start;
+    margin-top: -1.2rem;
 
 
     h1{
@@ -15,14 +16,14 @@
     }
   
     .landing-nav{
-      padding: 1rem;
+    //   padding: 1rem;
   
       .link{
         color: #489551;
         text-decoration: none;
         font-weight: bold;
         font-size: 1.5rem;
-        padding: 1rem;
+        padding: 0 1rem;
       }
     }
   }
